[package]
name = "rust-monero"
version = "0.1.0"
authors = ["LINE <769483043@qq.com>"]
edition = "2018"

[workspace]
members = [
    "src/db",
    "src/crypto",
    "src/cryptonote_basic",
    "src/device"
]

[dependencies]
lmdb = "0.8.0"
xmr_db = {path = "src/db"}
xmr_crypto = {path = "src/crypto"}
xmr_cryptonote_basic = {path = "src/cryptonote_basic"}
xmr_device = {path = "src/device"}
