[package]
name = "rust-monero"
version = "0.1.0"
authors = ["LINE <769483043@qq.com>"]
edition = "2018"

[workspace]
members = [
    "src/db",
    "src/crypto",
    "src/cryptonote_basic",
    "src/cryptonote_core",
    "src/device"
]

[dependencies]
lmdb = "0.8.0"
db = {path = "src/db"}
crypto = {path = "src/crypto"}
cryptonote_basic = {path = "src/cryptonote_basic"}
cryptonote_core = {path = "src/cryptonote_core"}
device = {path = "src/device"}
