[package]
name = "rust-monero"
version = "0.1.0"
authors = ["LINE <769483043@qq.com>"]
edition = "2018"

[workspace]
members = [
    "src/db",
    "src/crypto",
    "src/cryptonote_basic",
    "src/cryptonote_core",
    "src/cryptonote_config",
    "src/device",
    "src/ringct",
    "src/checkpoints",
    "src/levin"
]

[dependencies]
db = {path = "src/db"}
crypto = {path = "src/crypto"}
cryptonote_basic = {path = "src/cryptonote_basic"}
cryptonote_core = {path = "src/cryptonote_core"}
cryptonote_config = {path = "src/cryptonote_config"}
device = {path = "src/device"}
ringct = {path = "src/ringct"}
checkpoints = {path = "src/checkpoints"}
levin = {path = "src/levin"}

lmdb = "0.8.0"
